added some colors

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="./recipes/burger.html">Burger</a></li>
-      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-      <li><a href="./recipes/pizza.html">Pizza</a></li>
+    <h1 class="indexTitle">Odin Recipes</h1>
+    <ul class="indexList">
+      <li><a href="./recipes/burger.html" id="naviBurger">Burger</a></li>
+      <li><a href="./recipes/lasagna.html" id="naviLasagna">Lasagna</a></li>
+      <li><a href="./recipes/pizza.html" id="naviPizza">Pizza</a></li>
     </ul>
+    <button type="button">Nothing will happen if you click me</button>
   </body>
 </html>
