--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,10 +1,11 @@
-<h1>Burger</h1>
+<link rel="stylesheet" href="../style.css">
+<h1 id="titleBurger">Burger</h1>
 <img src="../img/burger.jpg" alt="The Perfect Basic Burger">
 <h2>Description</h2>
 <p>These burger patties are made with ground beef and an easy bread crumb mixture. Nothing beats a simple hamburger on a warm summer evening. Pile these burgers with your favorite condiments and pop open a cool drink!</p>
 <p>Need a basic burger recipe that you can whip up in no time? We have the perfect one. With just 5 ingredients and 15 minutes of cooking time, this flavorful recipe is ready to be shared, topped, and sauced in any way you like! Learn how to make your own sizzling beef burger patties right here.</p>
 <h3>Ingredients</h3>
-<ul>
+<ul class="list">
   <li>1 large egg</li>
   <li>1/2 teaspoon salt</li>
   <li>1/2 teaspoon ground black pepper</li>
@@ -12,7 +13,7 @@
   <li>1/2 cup fine dry bread crumbs</li>
 </ul>
 <h3>Steps</h3>
-<ol>
+<ol class="list">
   <li>Preheat an outdoor grill for high heat and lightly oil grate.</li>
   <li>Whisk together egg, salt, and pepper in a medium bowl.</li>
   <li>Add ground beef and bread crumbs and mix with your hands or a fork until well blended.</li>
