--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,11 +1,12 @@
-<h1>Pizza</h1>
+<link rel="stylesheet" href="../style.css">
+<h1 id="titlePizza">Pizza</h1>
 <img src="../img/pizza.jpg" alt="Brick-Oven Pizza (Brooklyn Style)">
 <h2>Description</h2>
 <p>This simple brick-oven pizza recipe has been made famous by several well-known, Brooklyn wood-fire pizzerias.</p>
 <p>Best accompanied by ice-cold, pilsner-style lager beer.</p>
 <h3>Ingredients</h3>
 <h4>Dough:</h4>
-<ul>
+<ul class="list">
   <li>1/4 cup warm water</li>
   <li>1 teaspoon active dry yeast</li>
   <li>1 cup cold water</li>
@@ -14,7 +15,7 @@
   <li>1 tablespoon extra-virgin olive oil</li>
 </ul>
 <h4>Toppings:</h4>
-<ul>
+<ul class: "list">
   <li>6 ounces low moisture mozzarella cheese, thinly sliced</li>
   <li>1/2 teaspoon dried oregano</li>
   <li>1/4 teaspoon freshly ground black pepper</li>
@@ -23,7 +24,7 @@
   <li>6 leaves fresh basil, torn</li>
 </ul>
 <h3>Steps</h3>
-<ol>
+<ol "list">
   <li>Make the dough: Pour warm water into a large bowl, then sprinkle yeast over the top. Let stand for 5 minutes. Stir in cold water and salt. Stir in flour, 1 cup at a time until incorporated.</li>
   <li>Knead dough on a floured surface until smooth, about 10 minutes.</li>
   <li>Divide in half and form into two tight dough balls. Coat with olive oil and refrigerate in a sealed container for at least 16 hours. Be sure to use a big enough container to allow dough to rise.</li>
