--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,10 +1,11 @@
-<h1>Lasagna</h1>
+<link rel="stylesheet" href="../style.css">
+<h1 id="titleLasagna">Lasagna</h1>
 <img src="../img/lasagna.jpg" alt="World's best lasagna">
 <h2>Description</h2>
 <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
 <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades.</p>
 <h3>Ingredients</h3>
-<ul>
+<ul class="list">
   <li>Meat</li>
   <li>Onion and garlic</li>
   <li>Tomato products</li>
@@ -15,7 +16,7 @@
   <li>Egg</li>
 </ul>
 <h3>Steps</h3>
-<ol>
+<ol class="list">
   <li>Make the meat sauce</li>
   <li>Cook the noodles</li>
   <li>Make the ricotta mixture</li>
