bugfix on pizza

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -15,7 +15,7 @@
   <li>1 tablespoon extra-virgin olive oil</li>
 </ul>
 <h4>Toppings:</h4>
-<ul class: "list">
+<ul class="list">
   <li>6 ounces low moisture mozzarella cheese, thinly sliced</li>
   <li>1/2 teaspoon dried oregano</li>
   <li>1/4 teaspoon freshly ground black pepper</li>
@@ -24,7 +24,7 @@
   <li>6 leaves fresh basil, torn</li>
 </ul>
 <h3>Steps</h3>
-<ol "list">
+<ol class="list">
   <li>Make the dough: Pour warm water into a large bowl, then sprinkle yeast over the top. Let stand for 5 minutes. Stir in cold water and salt. Stir in flour, 1 cup at a time until incorporated.</li>
   <li>Knead dough on a floured surface until smooth, about 10 minutes.</li>
   <li>Divide in half and form into two tight dough balls. Coat with olive oil and refrigerate in a sealed container for at least 16 hours. Be sure to use a big enough container to allow dough to rise.</li>
